--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,22 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="styles.css">
+<link href="https://fonts.googleapis.com/css?family=Rasa" rel="stylesheet">
 </head>
 <body>
 	<header class = "header__wrapper" >
-		<select  class=" sourse-selector header-item" id = "selector-sourses"></select> 
+		<select  class=" sourse-selector header-item" id = "selector-sourses"></select>
 			<input class="search-text header-item " id = "search-text">
-			<button class="button-search header-item buttonColor  " id = "button-search" type = "submit">Найти</button>
+			<button class="button-search header-item buttonColor  " id = "button-search" type = "submit">Search</button>
 	</header>
 
 	<main>
 		<div class="news" id = "news-container"></div>
-		<button class="load-more buttonColor " id ="load-more" type = "submit" >Загрузить больше</button>
+		<button class="load-more buttonColor " id ="load-more" type = "submit" >Load more</button>
 	</main>
 
 	<footer></footer>
