--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
 <link href="https://fonts.googleapis.com/css?family=Rasa" rel="stylesheet">
 </head>
 <body>
+
+  <div class="wrapper">
+
 	<header class = "header__wrapper" >
 		<select  class=" sourse-selector header-item" id = "selector-sourses"></select>
 			<input class="search-text header-item " id = "search-text">
@@ -19,7 +22,10 @@
 		<button class="load-more buttonColor " id ="load-more" type = "submit" >Load more</button>
 	</main>
 
-	<footer></footer>
+	<div class="push"></div>
+  </div>
+  <footer class="footer">
+  </footer>
 
 <script src ="../dist/app.js" ></script>	
 </body>
